fixed issue with navbar not collapsing on mobile, changed font size

--- a/less/main.less
+++ b/less/main.less
@@ -3,21 +3,24 @@
 
 .info {
     margin: auto;
-    width: 200px;
+    width: 300px;
     text-align: center;
     font-family: typeWriter, serif;
     position: relative;
-    top: 30%;
+    top: 23%;
 
     .name {
-        font-size: 30px;
+        font-size: 60px;
     }
 
     .job {
+        font-size: 35px;
         font-weight: bold;
     }
 
     .typed-cursor{
+        font-size: 45px;
+        font-family: Helvetica;
         opacity: 1;
         -webkit-animation: blink 0.7s infinite;
         -moz-animation: blink 0.7s infinite;
