--- a/less/navbar.less
+++ b/less/navbar.less
@@ -13,7 +13,8 @@
 
     .nav {
         li {
-            a {
+            a, 
+            a:focus {
                 color: white;
                 text-transform: uppercase;
             }
